--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
-title: Microservice Hackathon
+title: Codepot Microservices - Warszawa 2015-08-26
+url: "http://Codepot-Microservices-2015-08.github.io"
 markdown: redcarpet
 exclude: ['vendor']
+domain: codepot
