--- a/_data/tools.yml
+++ b/_data/tools.yml
@@ -14,3 +14,7 @@
     url: http://apps.codepot:8080/exhibitor/v1/ui/index.html
 -   name: Jenkins
     url: http://jenkins.codepot:8080/
+-   name: Hystrix Dashboard
+    url: http://apps.codepot:8090/hystrix-dashboard/
+-   name: Seyren
+    url: http://seyren.codepot:8080/
