--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,24 +1,32 @@
 -   name: aggregatr-blue
+    domain: blue
     port: 9090
     template: ssh://git@github.com/2015-06-devoxx-microservices/aggregatr.io.git
 -   name: butelkatr-blue
+    domain: blue
     port: 9091
     template: ssh://git@github.com/2015-06-devoxx-microservices/butelkatr.io.git
 -   name: dojrzewatr-blue
+    domain: blue
     port: 9092
     template: ssh://git@github.com/2015-06-devoxx-microservices/dojrzewatr.io.git
 -   name: prezentatr-blue
+    domain: blue
     port: 9093
     template: ssh://git@github.com/2015-06-devoxx-microservices/prezentatr.io.git
 -   name: aggregatr-red
+    domain: red
     port: 9190
     template: ssh://git@github.com/2015-06-devoxx-microservices/aggregatr.io.git
 -   name: butelkatr-red
+    domain: red
     port: 9191
     template: ssh://git@github.com/2015-06-devoxx-microservices/butelkatr.io.git
 -   name: dojrzewatr-red
+    domain: red
     port: 9192
     template: ssh://git@github.com/2015-06-devoxx-microservices/dojrzewatr.io.git
 -   name: prezentatr-red
+    domain: red
     port: 9193
     template: ssh://git@github.com/2015-06-devoxx-microservices/prezentatr.io.git
